fix $base-spacing

--- a/src/assets/sass/partials/_variables.scss
+++ b/src/assets/sass/partials/_variables.scss
@@ -29,7 +29,7 @@ $nano-size:                 12px !default;
 $piko-size:                 11px !default;
 
 //  Spacing
-$base-spacing:              $base-line-height !default; // 20px
+$base-spacing:              20px !default; // 20px
 $half-base-spacing:         $base-spacing / 2 !default; // 10px
 
 $google-spacing:            8px !default;
